--- a/web-cse/index.html
+++ b/web-cse/index.html
@@ -16,7 +16,7 @@
             <li><a href="#">Home</a></li>
             
             <li><a href="#">Usage guide </a></li>
-            <li><a href="#">About this app</a></li>
+            <li><a href="#">About us</a></li>
             <li>
                 <input type="text" id="city-input" placeholder="Enter city name" class="form-control">
                 <button id="search-button" class="btn btn-primary mt-2">Search</button>
